<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/geral_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/geral_5dp"
        android:textSize="24sp"
        tools:text="Belo Horizonte" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_descricao_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao_gasto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_valor_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_gasto" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_metodo_pagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forma_de_pagamento" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_data_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_do_gasto"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_salvar_gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/geral_5dp"
        android:text="@string/salvar_gasto" />

</LinearLayout>