<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginLeft="@dimen/geral_8dp"
        android:layout_marginRight="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destino"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_view_texto_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:text="@string/razao_viagem"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <RadioGroup
        android:id="@+id/radio_group_razao_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_texto_destino">

        <RadioButton
            android:id="@+id/radio_lazer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lazer"/>

        <RadioButton
            android:id="@+id/radio_negocios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/negocios"/>
    </RadioGroup>

    <ImageButton
        android:id="@+id/image_button_pega_localizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/geral_8dp"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:layout_weight="1"
        android:contentDescription="@string/pega_localizacao"
        app:layout_constraintBottom_toTopOf="@+id/button_pega_data_saida"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
        app:srcCompat="@drawable/ic_my_location"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/geral_5dp"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_button_pega_localizacao"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_razao_viagem">

        <EditText
            android:id="@+id/edit_text_local_hospedagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/local_hospedagem"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_pega_data_chegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/geral_8dp"
        android:text="@string/data_da_chegada"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"/>

    <Button
        android:id="@+id/button_pega_data_saida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/geral_8dp"
        android:text="@string/data_da_partida"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"/>

</android.support.constraint.ConstraintLayout>