<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/geral_8dp"
    android:layout_marginEnd="@dimen/geral_8dp"
    android:layout_marginStart="@dimen/geral_8dp"
    android:layout_marginTop="@dimen/geral_8dp"
    android:background="@color/divider">

    <TextView
        android:id="@+id/text_view_destino_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_view_arrow"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Belo Horizonte" />

    <TextView
        android:id="@+id/text_view_razao_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_destino_viagem"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toRightOf="@+id/text_view_destino_viagem"
        app:layout_constraintRight_toLeftOf="@+id/image_view_arrow"
        tools:text="Lazer" />

    <ImageView
        android:id="@+id/image_view_arrow"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/geral_8dp"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_5dp"
        android:contentDescription="@string/content_decriotion_arrow_item"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_gasto_totoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:text="@string/gasto_total_cifrao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_destino_viagem" />

    <TextView
        android:id="@+id/text_view_total_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/geral_8dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_gasto_totoal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/text_view_gasto_totoal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_gasto_totoal"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_duracao_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:text="@string/duracao_da_viagem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_gasto_totoal" />

    <TextView
        android:id="@+id/text_view_data_chegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:text="@string/_00_00"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_duracao_viagem" />

    <TextView
        android:id="@+id/text_view_data_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/geral_8dp"
        android:layout_marginStart="@dimen/geral_8dp"
        android:layout_marginTop="@dimen/geral_8dp"
        android:text="@string/_00_00"
        app:layout_constraintLeft_toRightOf="@+id/text_view_data_chegada"
        app:layout_constraintTop_toBottomOf="@+id/text_view_duracao_viagem" />

</android.support.constraint.ConstraintLayout>